# limn

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: api.md  charts.md  data.md  quickstart.md  styling.md
examples/: gallery.py
gallery/: dusk.html  index.html
limn/: __init__.py  __main__.py  api.py  coerce.py  figure.py  ingest.py  marks.py  metrics.py  scales.py  svg.py  theme.py  ticks.py
tests/: test_api.py  test_coerce.py  test_figure.py  test_geometry.py  test_ingest.py  test_marks.py  test_palette.py  test_scales.py  test_ticks.py  test_v11.py
tools/: cvd.py  pick_palette.py
