[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "limn"
version = "1.0.0"
description = "Charts for people who have real data, not clean data — zero-dependency SVG plotting with smart ingestion."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Alberto Barnabo" }]
keywords = ["charts", "plotting", "svg", "visualization", "csv",
            "data-cleaning", "zero-dependency"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Gallery = "https://github.com/albertobarnabo/limn/tree/main/gallery"

[tool.setuptools]
packages = ["limn"]
